Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27317

Assertion `xid_seqno > wsrep_seqno' failed in void trx_rseg_update_wsrep_checkpoint(buf_block_t*, const XID*, mtr_t*)

    XMLWordPrintable

Details

    Description

      10.8.0 a44ba7aa3b5de62b08ebcf46bea2b7da17587e7b

      Core was generated by `/test/mtest/GAL_MD161221-mariadb-10.8.0-linux-x86_64-dbg-uca/bin/mysqld --defau'.
      Program terminated with signal SIGABRT, Aborted.
      #0  0x0000000070000002 in ?? ()
      [Current thread is 1 (Thread 0x5d0513986700 (LWP 3782116))]
      (gdb) bt
      #0  0x0000000070000002 in ?? ()
      #1  0x00003aa02eed2766 in _raw_syscall () at /home/roc/rr/rr/src/preload/raw_syscall.S:120
      #2  0x00003aa02eece04e in traced_raw_syscall (call=<optimized out>) at /home/roc/rr/rr/src/preload/syscallbuf.c:272
      #3  0x00003aa02eed14d1 in syscall_hook_internal (call=0x14ac97500fa0) at /home/roc/rr/rr/src/preload/syscallbuf.c:3295
      #4  syscall_hook (call=0x14ac97500fa0) at /home/roc/rr/rr/src/preload/syscallbuf.c:3329
      #5  0x00003aa02eecde50 in _syscall_hook_trampoline () at /home/roc/rr/rr/src/preload/syscall_hook.S:313
      #6  0x00003aa02eecdeaf in __morestack () at /home/roc/rr/rr/src/preload/syscall_hook.S:458
      #7  0x00003aa02eecdf08 in _syscall_hook_trampoline_89_c2_f7_da () at /home/roc/rr/rr/src/preload/syscall_hook.S:504
      #8  0x000062901f855f0c in __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #9  0x0000564a73981a6f in my_write_core (sig=sig@entry=6) at /test/mtest/10.8_dbg/mysys/stacktrace.c:424
      #10 0x0000564a7315e4a5 in handle_fatal_signal (sig=6) at /test/mtest/10.8_dbg/sql/signal_handler.cc:345
      #11 <signal handler called>
      #12 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #13 0x0000564a724d7859 in __GI_abort () at abort.c:79
      #14 0x0000564a724d7729 in __assert_fail_base (fmt=0x564a7266d588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x564a73de4556 "xid_seqno > wsrep_seqno", 
          file=0x564a73de4648 "/test/mtest/10.8_dbg/storage/innobase/trx/trx0rseg.cc", line=124, function=<optimized out>) at assert.c:92
      #15 0x0000564a724e8f36 in __GI___assert_fail (assertion=assertion@entry=0x564a73de4556 "xid_seqno > wsrep_seqno", file=file@entry=0x564a73de4648 "/test/mtest/10.8_dbg/storage/innobase/trx/trx0rseg.cc", 
          line=line@entry=124, function=function@entry=0x564a73de4800 "void trx_rseg_update_wsrep_checkpoint(buf_block_t*, const XID*, mtr_t*)") at assert.c:101
      #16 0x0000564a737494fb in trx_rseg_update_wsrep_checkpoint (rseg_header=rseg_header@entry=0x7ffdcc5cd430, xid=xid@entry=0x51575da612a0, mtr=mtr@entry=0x5d0513983700)
          at /test/mtest/10.8_dbg/storage/innobase/trx/trx0rseg.cc:124
      #17 0x0000564a73729a70 in trx_purge_add_undo_to_history (trx=trx@entry=0x51575da601e0, undo=@0x51575da61238: 0x145d502dc968, mtr=mtr@entry=0x5d0513983700)
          at /test/mtest/10.8_dbg/storage/innobase/trx/trx0purge.cc:303
      #18 0x0000564a73758149 in trx_write_serialisation_history (mtr=0x5d0513983700, trx=0x51575da601e0) at /test/mtest/10.8_dbg/storage/innobase/trx/trx0trx.cc:1049
      #19 trx_t::commit_low (this=this@entry=0x51575da601e0, mtr=0x5d0513983700) at /test/mtest/10.8_dbg/storage/innobase/trx/trx0trx.cc:1424
      #20 0x0000564a73759baf in trx_t::commit_persist (this=this@entry=0x51575da601e0) at /test/mtest/10.8_dbg/storage/innobase/trx/trx0trx.cc:1462
      #21 0x0000564a73759d81 in trx_t::commit (this=this@entry=0x51575da601e0) at /test/mtest/10.8_dbg/storage/innobase/trx/trx0trx.cc:1468
      #22 0x0000564a73759fbe in trx_commit_for_mysql (trx=trx@entry=0x51575da601e0) at /test/mtest/10.8_dbg/storage/innobase/trx/trx0trx.cc:1584
      #23 0x0000564a7350efeb in innobase_commit_low (trx=trx@entry=0x51575da601e0) at /test/mtest/10.8_dbg/storage/innobase/handler/ha_innodb.cc:4308
      #24 0x0000564a7350f06c in innobase_commit_ordered_2 (trx=trx@entry=0x51575da601e0, thd=thd@entry=0x145d50000ff8) at /test/mtest/10.8_dbg/storage/innobase/handler/ha_innodb.cc:4414
      #25 0x0000564a7350f351 in innobase_commit (hton=<optimized out>, thd=0x145d50000ff8, commit_trx=<optimized out>) at /test/mtest/10.8_dbg/storage/innobase/handler/ha_innodb.cc:4515
      #26 0x0000564a73163f00 in commit_one_phase_2 (thd=thd@entry=0x145d50000ff8, all=all@entry=true, trans=trans@entry=0x145d50004978, is_real_trans=is_real_trans@entry=true)
          at /test/mtest/10.8_dbg/sql/handler.cc:2052
      #27 0x0000564a73164219 in ha_commit_one_phase (thd=thd@entry=0x145d50000ff8, all=all@entry=true) at /test/mtest/10.8_dbg/sql/handler.cc:2005
      #28 0x0000564a731784c7 in ha_commit_trans (thd=thd@entry=0x145d50000ff8, all=all@entry=true) at /test/mtest/10.8_dbg/sql/handler.cc:1799
      #29 0x0000564a72ff01b8 in trans_commit (thd=thd@entry=0x145d50000ff8) at /test/mtest/10.8_dbg/sql/transaction.cc:266
      #30 0x0000564a734c790c in Wsrep_high_priority_service::commit (this=0x5d0513985d10, ws_handle=..., ws_meta=...) at /test/mtest/10.8_dbg/sql/wsrep_high_priority_service.cc:329
      #31 0x0000564a73adab6a in apply_write_set (server_state=..., high_priority_service=..., ws_handle=..., ws_meta=..., data=...) at /test/mtest/10.8_dbg/wsrep-lib/src/server_state.cpp:332
      #32 0x0000564a73adba8b in wsrep::server_state::on_apply (this=<optimized out>, high_priority_service=..., ws_handle=..., ws_meta=..., data=...) at /test/mtest/10.8_dbg/wsrep-lib/src/server_state.cpp:1145
      #33 0x0000564a73aec215 in wsrep::high_priority_service::apply (data=..., ws_meta=..., ws_handle=..., this=0x5d0513985d10) at /test/mtest/10.8_dbg/wsrep-lib/include/wsrep/high_priority_service.hpp:47
      #34 (anonymous namespace)::apply_cb (ctx=ctx@entry=0x5d0513985d10, wsh=wsh@entry=0x5d0513984d20, flags=flags@entry=65, buf=buf@entry=0x5d0513984d30, meta=meta@entry=0x5d0513984fe0, 
          exit_loop=exit_loop@entry=0x5d0513984f9f) at /test/mtest/10.8_dbg/wsrep-lib/src/wsrep_provider_v26.cpp:504
      #35 0x000062901f5fa3b5 in galera::TrxHandleSlave::apply (this=this@entry=0x7d8f6c4ef7a0, recv_ctx=recv_ctx@entry=0x5d0513985d10, 
          apply_cb=0x564a73aec092 <(anonymous namespace)::apply_cb(void*, wsrep_ws_handle_t const*, uint32_t, wsrep_buf_t const*, wsrep_trx_meta_t const*, wsrep_bool_t*)>, meta=..., 
          exit_loop=exit_loop@entry=@0x5d0513984f9f: false) at /test/mtest/10.8_galera_dbg/galera/src/trx_handle.cpp:396
      #36 0x000062901f610d9e in galera::ReplicatorSMM::apply_trx (this=0x564a75840d40, recv_ctx=0x5d0513985d10, ts=...) at /test/mtest/10.8_galera_dbg/galera/src/replicator_smm.cpp:508
      #37 0x000062901f614fb8 in galera::ReplicatorSMM::process_trx (this=0x564a75840d40, recv_ctx=0x5d0513985d10, ts_ptr=...) at /test/mtest/10.8_galera_dbg/galera/src/replicator_smm.cpp:2128
      #38 0x000062901f646259 in galera::GcsActionSource::process_writeset (this=0x564a7584c300, recv_ctx=0x5d0513985d10, act=..., exit_loop=@0x5d051398591f: false)
      --Type <RET> for more, q to quit, c to continue without paging--
          at /test/mtest/10.8_galera_dbg/galera/src/gcs_action_source.cpp:62
      #39 0x000062901f646cb3 in galera::GcsActionSource::dispatch (this=0x564a7584c300, recv_ctx=0x5d0513985d10, act=..., exit_loop=<optimized out>) at /test/mtest/10.8_galera_dbg/galera/src/gcs_action_source.cpp:110
      #40 0x000062901f647272 in galera::GcsActionSource::process (this=0x564a7584c300, recv_ctx=0x5d0513985d10, exit_loop=@0x5d051398591f: false) at /test/mtest/10.8_galera_dbg/galera/src/gcs_action_source.cpp:186
      #41 0x000062901f612440 in galera::ReplicatorSMM::async_recv (this=0x564a75840d40, recv_ctx=0x5d0513985d10) at /test/mtest/10.8_galera_dbg/galera/src/replicator_smm.cpp:394
      #42 0x000062901f5e6881 in galera_recv (gh=<optimized out>, recv_ctx=<optimized out>) at /test/mtest/10.8_galera_dbg/galera/src/wsrep_provider.cpp:261
      #43 0x0000564a73aec676 in wsrep::wsrep_provider_v26::run_applier (this=<optimized out>, applier_ctx=<optimized out>) at /test/mtest/10.8_dbg/wsrep-lib/src/wsrep_provider_v26.cpp:796
      #44 0x0000564a734e62dd in wsrep_replication_process (thd=0x145d50000ff8, arg=<optimized out>) at /test/mtest/10.8_dbg/sql/wsrep_server_state.h:51
      #45 0x0000564a734d369d in start_wsrep_THD (arg=arg@entry=0x564a75879fb0) at /test/mtest/10.8_dbg/sql/wsrep_mysqld.h:575
      #46 0x0000564a7345df65 in pfs_spawn_thread (arg=0x564a75868e88) at /test/mtest/10.8_dbg/storage/perfschema/pfs.cc:2201
      #47 0x000062901f84d609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #48 0x0000564a725d4293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.25h
                  6.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.