MDEV-27317 wsrep_checkpoint order violation due to certification failure

Relaxing wsrep_checkpoint order requirement for certification failure cases