sql/wsrep_server_service.cc
@@ -159,7 +159,7 @@ void Wsrep_server_service::bootstrap()
   wsrep::log_info()
     << "Bootstrapping a new cluster, setting initial position to "
     << wsrep::gtid::undefined();
-  wsrep_set_SE_checkpoint(wsrep::gtid::undefined(), wsrep_gtid_server.undefined());
+  wsrep_set_SE_checkpoint(wsrep::gtid::undefined(), wsrep_gtid_server.undefined(), false);
 }
 
 void Wsrep_server_service::log_message(enum wsrep::log::level level,
@@ -222,7 +222,7 @@ void Wsrep_server_service::log_view(
       if (prev_view.state_id().id() != view.state_id().id())
       {
         WSREP_DEBUG("New cluster UUID was generated, resetting position info");
-        wsrep_set_SE_checkpoint(wsrep::gtid::undefined(), wsrep_gtid_server.undefined());
+        wsrep_set_SE_checkpoint(wsrep::gtid::undefined(), wsrep_gtid_server.undefined(), false);
         checkpoint_was_reset= true;
       }
 
@@ -273,7 +273,7 @@ void Wsrep_server_service::log_view(
           Wsrep_server_state::instance().provider().last_committed_gtid().seqno();
       if (checkpoint_was_reset || last_committed != view.state_id().seqno())
       {
-        wsrep_set_SE_checkpoint(view.state_id(), wsrep_gtid_server.gtid());
+        wsrep_set_SE_checkpoint(view.state_id(), wsrep_gtid_server.gtid(), false);
       }
       DBUG_ASSERT(wsrep_get_SE_checkpoint<wsrep::gtid>().id() == view.state_id().id());
     }
@@ -327,7 +327,7 @@ void Wsrep_server_service::set_position(wsrep::client_service& c WSREP_UNUSED,
     WSREP_WARN("Wait for gtid returned error %d while waiting for "
                "prior transactions to commit before setting position", err);
   }
-  wsrep_set_SE_checkpoint(gtid, wsrep_gtid_server.gtid());
+  wsrep_set_SE_checkpoint(gtid, wsrep_gtid_server.gtid(), false);
 }
 
 void Wsrep_server_service::log_state_change(
